# Covid-19-Fake-New-Detection-Modeling

./: README.md
covid-analysis/: pyproject.toml
covid-analysis/covid_analysis/: CovidFakeNewsDetector.ipynb
