[tool.poetry]
name = "covid-analysis"
version = "0.1.0"
description = ""
authors = ["vudnguyen <vunguyenduc.it@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.12"
pandas = "^1.2.3"
matplotlib = "^3.4.1"
nltk = "^3.6.1"
seaborn = "^0.11.1"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
